# Parallel-Histogram-Equalization

./: README.md
CUDA_histogram_equalization/Debug/: histogram_equalization_CUDA  makefile  nsightbuilddata
CUDA_histogram_equalization/Debug/src/: histogram_equalization_CUDA.d  subdir.mk
CUDA_histogram_equalization/src/: Timer.h  histogram_equalization_CUDA.cu
OMP_histogram_equalization/: CMakeLists.txt  main  main.cpp
OMP_histogram_equalization/main.dSYM/Contents/Resources/DWARF/: main
code/CUDA_histogram_equalization/Debug/: nsightbuilddata  objects.mk
code/CUDA_histogram_equalization/src/: histogram_equalization_CUDA.cu
code/OMP_histogram_equalization/: main.cpp
code/results/: time_evaluator.cpp
code/results/parallel/CUDA/: CUDA_best.xlsx
code/sequential_histogram_equalization/: main.cpp
relazione_histogram_equalization/: relazione_histogram_equalization.aux  relazione_histogram_equalization.blg  relazione_histogram_equalization.tex
report/: relazione_histogram_equalization.aux  relazione_histogram_equalization.tex
results/: plot_histo_C_OMP.m
results/parallel/CUDA/400x400/: res.csv
results/parallel/CUDA/6400x6400/: res.csv
results/parallel/OMP/: OMP_2th.xlsx  OMP_4th.xlsx  OMP_8th.xlsx  OMP_choice.xlsx
results/parallel/OMP/2_thread/: par100x100.csv  par12800x12800.csv  par1600x1600.csv  (+5 more)
results/sequential/: seq100x100.csv  seq12800x12800.csv  seq1600x1600.csv  seq200x200.csv  seq3200x3200.csv  seq400x400.csv  seq6400x6400.csv  seq800x800.csv  seq_globale.xlsx
sequential_histogram_equalization/: CMakeLists.txt  main.cpp
(+24 files in other folders)
